--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@types/styled-components": "^5.1.26",
+    "classnames": "^2.3.2",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.54.9",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
